# sustainmetric

./: .firebaserc  .gitignore  firebase.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  build.sh  config.py  main.py  pyproject.toml  render.yaml
apps/api/db/: __init__.py  audit.py  client.py  redis.py
apps/api/middleware/: auth.py
apps/api/migrations/: 001_enable_extensions.sql  002_create_tables.sql  003_enable_rls.sql  004_packages_and_commits.sql  005_branded_products.sql
apps/api/models/: __init__.py  schemas.py
apps/api/prompts/: site_analysis.j2
apps/api/routes/: geocode.py  health.py  me.py  packages.py  projects.py  queries.py
apps/api/scripts/: clear_demo_cache.py  run_migrations.py  warm_cache.py
apps/api/services/: __init__.py  gemini.py  pipeline.py  validation.py
apps/api/services/data_sources/: __init__.py  base.py  firms.py  mapillary.py  nominatim.py  open_meteo.py  openaq.py  overpass.py
apps/api/tests/: test_health.py
apps/api/tests/test_data_sources/: test_firms.py  test_mapillary.py  test_open_meteo.py  test_openaq.py  test_overpass.py
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/app/map/: page.tsx
apps/web/src/app/pave/: page.tsx
apps/web/src/app/skin/: page.tsx
apps/web/src/components/: AboutOverlay.tsx  AnalysisPanel.tsx  BrandNav.tsx  CommitModal.tsx  MapView.tsx  SearchBar.tsx  TierSelector.tsx  V2Roadmap.tsx
apps/web/src/lib/: api.ts  store.ts  tier.ts
apps/web/src/styles/: globals.css
scripts/: deploy.sh
